fix: Correct inconsistencies in container width
  - The width of elements in .form-group containing <select> tag
    is uneven incomparison to others
  - Corrected by setting <select>'s width to 80%. And <input>'s
    width to 78%. It's a little hacky.
  - Setting <input>'s width to 78% also solves the problem of
    container width inconsistency caused by the fixed-size width
    of #form-zip-code

--- a/online-registration-form/style/style.css
+++ b/online-registration-form/style/style.css
@@ -57,7 +57,8 @@ fieldset:last-of-type {
 }
 
 .form-group label,
-.form-group input {
+.form-group input,
+#form-state {
   width: 100%;
 }
 
@@ -115,6 +116,10 @@ fieldset:last-of-type {
 
   .form-group input {
     width: 80%;
+  }
+
+  #form-state {
+    width: 82%;
   }
 
   .newsletter-headline > div {
